Trying to fix contrast - 2

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -767,14 +767,14 @@
 
       .small-text {
         font-size: 1rem;
-        color: #757575;
+        color: #333333;
         margin-left: 1rem;
         padding-bottom: 0.5rem;
       }
     }
 
     p {
-      color: rgba(48, 69, 92, 0.8);
+      color: #333333;
       font-size: 17px;
       line-height: 26px;
       letter-spacing: 1px;
